--- a/LimakeSilverLightUI/MainPage.xaml
+++ b/LimakeSilverLightUI/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="LimakeSilverLightUI.MainPage"
+﻿<UserControl xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk"  x:Class="LimakeSilverLightUI.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -92,5 +92,14 @@
         <limake:BeerDisplay x:Name="RedBeer" Canvas.Left="575" Canvas.Top="275" />
         <limake:BeerDisplay x:Name="YellowBeer" Canvas.Left="125" Canvas.Top="425" />
         <limake:BeerDisplay x:Name="BlueBeer" Canvas.Left="425" Canvas.Top="575" />
+
+        <Grid x:Name="WinnerOverlay" Visibility="Collapsed" Canvas.Left="0" Canvas.Top="0" Canvas.ZIndex="100" Width="800" Height="800">
+            <Rectangle>
+                <Rectangle.Fill>
+                    <SolidColorBrush Color="Black" Opacity="0.5" />
+                </Rectangle.Fill>
+            </Rectangle>
+            <sdk:Label x:Name="WinnerLabel" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontSize="48"></sdk:Label>
+        </Grid>
     </Canvas>
 </UserControl>
