--- a/LimakeSilverLightUI/MainPage.xaml
+++ b/LimakeSilverLightUI/MainPage.xaml
@@ -1,8 +1,9 @@
-﻿<UserControl xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk"  x:Class="LimakeSilverLightUI.MainPage"
+﻿<navigation:Page xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk"  x:Class="LimakeSilverLightUI.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:navigation="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Navigation"
     mc:Ignorable="d"
     xmlns:ec="clr-namespace:Microsoft.Expression.Controls;assembly=Microsoft.Expression.Controls"
     xmlns:limake="clr-namespace:LimakeSilverLightUI"
@@ -102,4 +103,4 @@
             <sdk:Label x:Name="WinnerLabel" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" FontSize="48"></sdk:Label>
         </Grid>
     </Canvas>
-</UserControl>
+</navigation:Page>
